--- a/b/bm/bmi/bmi-calculator.net.html
+++ b/b/bm/bmi/bmi-calculator.net.html
@@ -1,89 +1,75 @@
-<!--The following is the downloaded HTML source of the bmi-calculator.net privacy policy that was archived on 2010-06-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100611210212id_/http%3A//www.bmi-calculator.net/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bmi-calculator.net privacy policy that was archived on 2010-09-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100907005457id_/http%3A//www.bmi-calculator.net/privacy.php) for the most accurate reproduction.-->
 
-<html><head>
+<!DOCTYPE html><html><head>
 <title>Privacy Policy</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" type="text/css" href="http://www.bmi-calculator.net/style.css">
 </head>
 <body>
-<center>
-<table width="728" cellpadding="0" border="0" cellspacing="0">
- <tbody><tr>
-	<td><h1><a href="http://www.bmi-calculator.net" title="BMI Calculator">BMI Calculator</a></h1> <h2>:</h2> <h2><a href="http://www.bmi-calculator.net/privacy.php" title="Privacy Policy">Privacy Policy</a></h2></td>
- </tr>
-</tbody></table>
-<br>
+<div id="wrap">
+<div id="header">
+<h1><a href="http://www.bmi-calculator.net" title="BMI Calculator">BMI Calculator</a></h1><h2> » </h2> <h2><a href="http://www.bmi-calculator.net/privacy.php" title="Privacy Policy">Privacy Policy</a></h2>
+</div>
+<div id="content"><div class="a1">
 <script type="text/javascript"><!--
 google_ad_client = "pub-9760480795384098";
+/* BMI Header Area */
+google_ad_slot = "5496738009";
 google_ad_width = 728;
 google_ad_height = 15;
-google_ad_format = "728x15_0ads_al";
-google_ad_channel ="";
-google_color_border = "E8E9FC";
-google_color_bg = "FFFFFF";
-google_color_link = "009999";
-google_color_url = "009999";
-google_color_text = "555555";
-//--></script>
+//-->
+</script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
-<br><br>
-<table width="728" cellpadding="0" border="0" cellspacing="0">
- <tbody><tr>
-	<td>
-   <script type="text/javascript"><!--
-   google_ad_client = "pub-9760480795384098";
-   google_ad_width = 728;
-   google_ad_height = 90;
-   google_ad_format = "728x90_as";
-   google_color_border = "FFFFF1";
-   google_color_bg = "FFFFF1";
-   google_color_link = "009999";
-   google_color_url = "009999";
-   google_color_text = "555555";
-   //--></script>
-   <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
-	 <p>We are glad of your interest in <a href="http://www.bmi-calculator.net">BMI Calculator</a>. We have created this privacy statement in order to demonstrate our firm commitment to privacy.</p>
-   <p>For each visitor to our Web Page, our Web Server automatically logs statistical information such as the user's IP address, browser type, and the site where the user came from. We do not set any cookies. None of this information can be used to personally identify an individual user. The information stored on our server may be used to provide statistics about the usage of this site, for the purpose of improving this site and to provide statistical information to advertisers. Only aggregated information is given, and the log file itself is not available to the public.</p>
-	 <p>To try and bring you offers that are of interest to you, we have relationships with other companies that we allow to place ads on our Web pages. As a result of your visit to our site, ad server companies may collect information such as your domain type, your IP address and clickstream information. An advertiser may also display an advertisement that contains a cookie. These cookies are not sent from our site and we have no access to the information in these cookies.</p>
-	 <p>For further information, consult the privacy policies of:<br>
-	   - <a href="http://www.google.com/adsense" target="_blank">Google Adsense</a>
-	 </p>
-	 <p>This site contains links to other sites. <a href="http://www.bmi-calculator.net" title="BMI Calculator">BMI Calculator</a> is not responsible for the privacy practices or the content of such Web Sites.</p>
-	 <p>From time to time, we may use customer information for new, unanticipated uses not previously disclosed in our privacy notice. If our information practices change at some time in the future we will post the policy changes to our Web site to notify you of these changes and provide you with the ability to opt out of these new uses. If you are concerned about how your information is used, you should check back at our Web site periodically.</p>
-	 <p>If you feel this site is not following it's stated privacy policy or if you have any further questions, you may contact us at info_at_bmi-calculator.net ( replace _at_ with @ )</p>
-	 <table width="100%">
-   <tbody><tr>
-	  <td width="50%" bgcolor="#FFFFF1" valign="top">
-  	 <table width="100%"><tbody><tr><th align="left">Resources</th></tr><tr><td><p><a href="http://www.bmi-calculator.net/disclaimer.php" title="Disclaimer">Disclaimer</a><br><a href="http://www.bmi-calculator.net/treatment/underweight-treatment.php" title="Underweight Treatment">Underweight Treatment</a><br><a href="http://www.bmi-calculator.net/treatment/overweight-treatment.php" title="Overweight Treatment">Overweight Treatment</a><br><a href="http://www.bmi-calculator.net/treatment/obesity-treatment.php" title="Obesity Treatment">Obesity Treatment</a></p></td></tr></tbody></table>
-	  </td>
-		<td width="2%">&nbsp;</td>
-		<td width="48%" bgcolor="#E8E9FC" valign="top">
-		 <table width="100%">
-		  <tbody><tr><th align="left">Calculators</th></tr>
-			 <tr><td><p><a href="http://www.bmi-calculator.net" title="BMI Calculator">BMI Calculator</a><br><a href="http://www.bmi-calculator.net/bmr-calculator/" title="BMR Calculator">BMR Calculator</a><br><a href="http://www.bmi-calculator.net/body-fat-calculator/" title="Body Fat Calculator">Body Fat Calculator</a><br><a href="http://www.bmi-calculator.net/waist-to-hip-ratio-calculator/" title="Waist to Hip Ratio Calculator">Waist to Hip Ratio Calculator</a></p></td></tr>
-     </tbody></table>
-	  </td>
-	 </tr></tbody></table>	 	  
-	 <br>
-	 <script type="text/javascript"><!--
+</div><div class="a2">
+<script type="text/javascript"><!--
 google_ad_client = "pub-9760480795384098";
+/* BMI Content Area */
+google_ad_slot = "5917297415";
 google_ad_width = 728;
 google_ad_height = 90;
-google_ad_format = "728x90_as";
-google_ad_type = "text_image";
-google_ad_channel ="";
-google_color_border = "E8E9FC";
-google_color_bg = "E8E9FC";
-google_color_link = "009999";
-google_color_url = "009999";
-google_color_text = "555555";
-//--></script>
+//-->
+</script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
-    <center>© <a href="http://www.bmi-calculator.net" title="BMI Calculator">BMI Calculator</a> | <a href="http://www.bmi-calculator.net/privacy.php" title="BMI Calculator Privacy Policy">Privacy Policy</a> | <a href="http://www.bmi-calculator.net/disclaimer.php" title="BMI Calculator Disclaimer">Disclaimer</a> | <a href="http://www.bmi-calculator.net/links.php" title="BMI Calculator Selected Links">Links</a></center>
-	</td>
- </tr>
-</tbody></table>
-</center>
+</div>
+<p>We are glad of your interest in <a href="http://www.bmi-calculator.net">BMI Calculator</a>. We have created this privacy statement in order to demonstrate our firm commitment to privacy.</p>
+ 
+<p>For each visitor to our Web Page, our Web Server automatically logs statistical information such as the user's IP address, browser type, and the site where the user came from. We do not set any cookies. None of this information can be used to personally identify an individual user. The information stored on our server may be used to provide statistics about the usage of this site, for the purpose of improving this site and to provide statistical information to advertisers. Only aggregated information is given, and the log file itself is not available to the public.</p>
+
+<p>To try and bring you offers that are of interest to you, we have relationships with other companies that we allow to place ads on our Web pages. As a result of your visit to our site, ad server companies may collect information such as your domain type, your IP address and clickstream information. An advertiser may also display an advertisement that contains a cookie. These cookies are not sent from our site and we have no access to the information in these cookies.</p>
+
+<p>For further information, consult the privacy policies of:<br>
+	- <a href="http://www.google.com/adsense" target="_blank">Google Adsense</a>
+</p>
+
+<p>This site contains links to other sites. <a href="http://www.bmi-calculator.net" title="BMI Calculator">BMI Calculator</a> is not responsible for the privacy practices or the content of such Web Sites.</p>
+
+<p>From time to time, we may use customer information for new, unanticipated uses not previously disclosed in our privacy notice. If our information practices change at some time in the future we will post the policy changes to our Web site to notify you of these changes and provide you with the ability to opt out of these new uses. If you are concerned about how your information is used, you should check back at our Web site periodically.</p>
+
+<p>If you feel this site is not following its stated privacy policy or if you have any further questions, you may contact us at info_at_bmi-calculator.net ( replace _at_ with @ )</p>
+	 
+	
+<table class="navigation noborder">
+<tbody><tr>
+<td class="yellow border" style="width:50%;"><table class="noborder"><tbody><tr><th>Resources</th></tr><tr><td><a href="http://www.bmi-calculator.net/disclaimer.php" title="Disclaimer">Disclaimer</a><br><a href="http://www.bmi-calculator.net/treatment/underweight-treatment.php" title="Underweight Treatment">Underweight Treatment</a><br><a href="http://www.bmi-calculator.net/treatment/overweight-treatment.php" title="Overweight Treatment">Overweight Treatment</a><br><a href="http://www.bmi-calculator.net/treatment/obesity-treatment.php" title="Obesity Treatment">Obesity Treatment</a><br></td></tr></tbody></table></td>
+<td class="purple border" style="width:50%;"><table class="noborder"><tbody><tr><th>Calculators</th></tr><tr><td><a href="http://www.bmi-calculator.net/" title="BMI Calculator">BMI Calculator</a><br><a href="http://www.bmi-calculator.net/bmr-calculator/" title="BMR Calculator">BMR Calculator</a><br><a href="http://www.bmi-calculator.net/body-fat-calculator/" title="Body Fat Calculator">Body Fat Calculator</a><br><a href="http://www.bmi-calculator.net/waist-to-hip-ratio-calculator/" title="Waist to Hip Ratio Calculator">Waist to Hip Ratio Calculator</a><br></td></tr></tbody></table></td>
+</tr></tbody></table>
+<div class="a3">
+<script type="text/javascript"><!--
+google_ad_client = "pub-9760480795384098";
+/* BMI Footer Area */
+google_ad_slot = "4986032098";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</div>
+</div>
+</div>
+<div id="footer">© <a href="http://www.bmi-calculator.net" title="BMI Calculator">BMI Calculator</a> | <a href="http://www.bmi-calculator.net/privacy.php" title="BMI Calculator Privacy Policy">Privacy Policy</a> | <a href="http://www.bmi-calculator.net/disclaimer.php" title="BMI Calculator Disclaimer">Disclaimer</a> | <a href="http://www.bmi-calculator.net/links.php" title="BMI Calculator Selected Links">Links</a></div>
+
 </body></html>
