--- a/s/sk/skr/skreemr.org.html
+++ b/s/sk/skr/skreemr.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the skreemr.org privacy policy that was archived on 2010-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100604063357id_/http%3A//skreemr.org/privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the skreemr.org privacy policy that was archived on 2010-09-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100907045920id_/http%3A//skreemr.org/privacy.jsp) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta charset="utf-8">
@@ -18,16 +18,11 @@
 <body>
 <table>
 <tbody><tr><td>
-<script type="text/javascript"><!--
-google_ad_client = "pub-7838996662104338";
-/* 728x90, created 5/12/10 */
-google_ad_slot = "5539376442";
-google_ad_width = 728;
-google_ad_height = 90;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+<!-- ValueClick Media 468x60 and 728x90 Banner CODE for SkreemR -->
+<script language="javascript" src="http://media.fastclick.net/w/get.media?sid=54338&amp;m=1&amp;tp=5&amp;d=j&amp;t=n"></script>
+<noscript><a href="http://media.fastclick.net/w/click.here?sid=54338&m=1&c=1" target="_blank">
+<img src="http://media.fastclick.net/w/get.media?sid=54338&m=1&tp=5&d=s&c=1" width=728 height=90 border=1></a></noscript>
+<!-- ValueClick Media 468x60 and 728x90 Banner CODE for SkreemR -->
 </td>
 </tr>
 </tbody></table>   
