--- a/e/en/enj/enjoythepics.com.html
+++ b/e/en/enj/enjoythepics.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the enjoythepics.com privacy policy that was archived on 2009-08-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090829172916id_/http%3A//www.enjoythepics.com/info.php%3Fact%3Dprivacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the enjoythepics.com privacy policy that was archived on 2010-09-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100907185641id_/http%3A//enjoythepics.com/info.php%3Fact%3Dprivacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/2002/REC-xhtml1-20020801/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-gb" xml:lang="en-gb"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -9,7 +9,7 @@
 <title>Welcome to EnjoyThePics, a free Picture upload solution. Simply browse, select, and upload!</title>
 <meta name="keywords" content="image hosting, image hosting service, multiple image hosting, unlimited bandwidth, quick image hosting">
 <meta name="description" content="EnjoyThePics is an easy image hosting solution for everyone.">
-<base href="http://www.enjoythepics.com/">
+<base href="http://enjoythepics.com/">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="screen">
 <link rel="shortcut icon" href="css/images/favicon.ico">
 <script type="text/javascript" src="http://www.google-analytics.com/urchin.js"></script>
@@ -30,8 +30,8 @@
 	<div class="members_bar">
 					<div class="guest_links">
 				Welcome Guest
-				( <a href="javascript:void(0);" onclick="javascript:toggle_lightbox('users.php?act=login&amp;return=aHR0cDovL3d3dy5lbmpveXRoZXBpY3MuY29tL2luZm8ucGhwP2FjdD1wcml2YWN5X3BvbGljeQ==', 'login_lightbox');">Log In</a> | 
-				<a href="javascript:void(0);" onclick="javascript:toggle_lightbox('users.php?act=register&amp;return=aHR0cDovL3d3dy5lbmpveXRoZXBpY3MuY29tL2luZm8ucGhwP2FjdD1wcml2YWN5X3BvbGljeQ==', 'register_lightbox');">Register</a> )
+				( <a href="javascript:void(0);" onclick="javascript:toggle_lightbox('users.php?act=login&amp;return=aHR0cDovL2Vuam95dGhlcGljcy5jb20vaW5mby5waHA/YWN0PXByaXZhY3lfcG9saWN5', 'login_lightbox');">Log In</a> | 
+				<a href="javascript:void(0);" onclick="javascript:toggle_lightbox('users.php?act=register&amp;return=aHR0cDovL2Vuam95dGhlcGljcy5jb20vaW5mby5waHA/YWN0PXByaXZhY3lfcG9saWN5', 'register_lightbox');">Register</a> )
 			</div>
 			</div>
 	<div id="page_body" class="page_body">
@@ -55,7 +55,7 @@ If you have any question, please do not hesitate to <a href="contact.php?act=con
 			<div class="page_footer">
 		Powered by <a href="http://www.enjoythepics.com/">EnjoyThePics</a> |
 		<a href="info.php?act=privacy_policy">Privacy Policy</a> | 
-		<a href="contact.php?act=contact_us">Contact Us</a> |  Page Views: 336,398
+		<a href="contact.php?act=contact_us">Contact Us</a> |  Page Views: 397,761
 	</div>
 
 
