--- a/f/fr/fro/frontrush.com.html
+++ b/f/fr/fro/frontrush.com.html
@@ -1,114 +1,50 @@
-<!--The following is the downloaded HTML source of the frontrush.com privacy policy that was archived on 2009-03-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090301031336id_/http%3A//www.frontrush.com/web/company/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the frontrush.com privacy policy that was archived on 2010-09-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100907205322id_/http%3A//www.frontrush.com/web/company/privacypolicy/index.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Front Rush : Privacy Policy</title>
-<link href="resources/css/products.css" rel="stylesheet" type="text/css">
-<link href="../../resources/css/css.css" rel="stylesheet" type="text/css">
-<link href="../../resources/css/nav.css" rel="stylesheet" type="text/css">
-
-
-
-
-<script type="text/javascript" src="../../resources/scripts/nav.js" charset="utf-8"></script>
-<script type="text/javascript" src="../../resources/scripts/rollover.js" charset="utf-8"></script>
-
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>Privacy Policy: Front Rush</title>
+	<meta name="description" content="Simple web-based athletic recruiting software for college coaches to manage recruits, roster, alumni, contacts, and campers">
+	<meta name="Keywords" content="college, college coaches, recruiting, college recruiting, college recruiting software, recruiting software, web-based recruiting software, athletic software, sports recruiting, sports recruiting software, contact management, summer camps, camps software, camp software, summer camp software">
+	<link href="../../resources/css/style1.css" rel="stylesheet" type="text/css">
+	<link href="resources/css/text.css" rel="stylesheet" type="text/css">
 </head>
-
-<body>
-<div id="mainly"><div id="container">
-<div id="toplinks">
-		
-<img src="../../resources/images/l1.jpg" hspace="0" vspace="0" border="0" align="left">
-<ul id="nav">	
-	  <li><a class="home" href="../../">Home</a></li>
-<li><a class="products" href="../../products/">Products</a>
-
-  <ul>
-  <li><a href="../../products/frontrush/">Front Rush</a></li>
-  <li><a href="../..//products/basecamp/">Front Rush Basecamp</a></li>
-  </ul>
-</li> 
-<li><a class="company" href="../../company/">Company</a>
-
-  <ul>
-  <li><a href="../ourstory/">Our Story</a></li>
- <li><a href="../mgmt/">Management Team</a></li>
-  <li><a href="../partners/">Strategic Partners</a></li>
-  </ul>
-</li>
-<li><a class="news" href="../../news/">News</a></li>
-<li><a class="clients" href="../../clients/">Clients</a>
- <ul>
-  <li><a href="../../clients/currentroster/">Current Roster</a></li>
-<li><a href="../../clients/testimonials/">Coach Testimonials</a></li>
-<li><a href="http://blog.frontrush.com">The Rush - Blog</a></li>
-  </ul></li>
-<li><a class="contact" href="../../contact/">Contact</a></li>
-</ul>
-	<img src="../../resources/images/rbrd1.jpg" hspace="0" vspace="0" border="0" align="left">
-	
-<!--top links div end tag-->
-</div>
-<div id="linktwo"><img src="../../resources/images/lbrd1.jpg" hspace="0" vspace="0" border="0" align="left"><img src="../../resources/images/frlogo.jpg" width="217" height="70" hspace="0" vspace="0" border="0" align="left">
-
-<a href="../../" onmouseover="rollover('one')" onmouseout="rollout('one')"><img src="../../resources/images/link1.jpg" name="one" width="77" height="70" hspace="0" vspace="0" border="0"></a>
-<script type="text/javascript">
-<!--
-setrollover("../../resources/images/link1g.jpg");
-//-->
-</script><a href="../../products/" onmouseover="rollover('two')" onmouseout="rollout('two')"><img src="../../resources/images/link2.jpg" name="two" width="107" height="70" hspace="0" vspace="0" border="0"></a>
-<script type="text/javascript">
-<!--
-setrollover("../../resources/images/link2g.jpg");
-//-->
-</script><a href="../../company/" onmouseover="rollover('three')" onmouseout="rollout('three')"><img src="../../resources/images/link3.jpg" name="three" width="83" height="70" hspace="0" vspace="0" border="0"></a><script type="text/javascript">
-<!--
-setrollover("../../resources/images/link3g.jpg");
-//-->
-</script><a href="../../news/" onmouseover="rollover('four')" onmouseout="rollout('four')"><img src="../../resources/images/link4.jpg" name="four" width="97" height="70" hspace="0" vspace="0" border="0"></a>
-<script type="text/javascript">
-<!--
-setrollover("../../resources/images/link4g.jpg");
-//-->
-</script><a href="../../clients/" onmouseover="rollover('five')" onmouseout="rollout('five')"><img src="../../resources/images/link5.jpg" name="five" width="77" height="70" hspace="0" vspace="0" border="0"></a>
-<script type="text/javascript">
-<!--
-setrollover("../../resources/images/link5g.jpg");
-//-->
-</script>
-<a href="../../contact/" onmouseover="rollover('six')" onmouseout="rollout('six')"><img src="../../resources/images/link6.jpg" name="six" width="90" height="70" hspace="0" vspace="0" border="0"></a>
-<script type="text/javascript">
-<!--
-setrollover("../../resources/images/link6g.jpg");
-//-->
-</script>
-
-<img src="../../resources/images/rbrd2.jpg" hspace="0" vspace="0" border="0" align="left"></div>
-<!--linktwo div end tag-->
-<div id="bc"><div id="fade2"></div><div id="containermain">
-<div id="productcont1"><div id="productcont2">
-<div id="tp"></div><div id="text">
-<div id="mcontainer">
-<strong>Front Rush Privacy Statement</strong><br>
+<body class="white">
+<div id="header">
+    <div id="nav">
+	<a name="myAnchor1" id="myAnchor1"></a>
+	  <a id="logo" title="College Recruiting Software Made Easy, frontrush.com" href="../../index.html">
+		<img alt="Front Rush College Recruiting Software" src="../../resources/images/frontrushlogonav.jpg" height="61" width="152">
+	  </a>
+	  <ul>
+	   	  <li><a href="../../index.html">Home</a></li>
+		  <li><a href="../../features/index.html">Features</a></li>
+		  <li><a href="../../about-us/index.html">About Us</a></li>
+		  <li><a href="../../index.html#myAnchor2">Contact</a></li>
+	  </ul>
+    </div>	
+  </div>
+  <div class="container">
+  <div class="standard-text">
+  <strong>Front Rush Privacy Statement</strong><br>
 Front Rush LLC ("Front Rush") respects your privacy and has created this privacy statement ("Statement") in order to demonstrate our commitment to customer privacy. This policy governs web sites owned and operated by Front Rush, including www.frontrush.com.  We have established this Statement as a means to communicate our information gathering and dissemination practices to our customers and visitors. This online privacy policy describes how we use, disclose and protect personal information that you share with us. "Personal information" is information that enables us to identify you, such as your name and e-mail address.  By using this Site, you agree to this Privacy Policy.<br><br>
 <strong>Front Rush Web Site Visitors</strong><br>
 If you supply us with your telephone number, you may receive telephone contact from us with information regarding orders you have placed, new products and services, or information on upcoming events.  Email addresses - We collect the email addresses of those who communicate with us by email. The email addresses are used to contact existing or potential business customers. Consumer-provided email is kept only for the purpose of providing consumer advice and assistance. We will not share business or consumer email addresses you give to us with other marketers unless you agree and double opt-in to receive these offers. If you do not wish to receive phone calls or emails from Front Rush in the future please let us know by sending an email to info@frontrush.com. <br><br>
 If you do not sign on to our Web site, our Web server does not have access to personally identifiable information about you. It does not know your email address unless you  volunteer it.  Use of Anonymous IP Address - IP addresses are recorded by every site on the Internet.  Front Rush collects this information as well, but does so exclusively for the following uses: (1) anonymous statistical purposes; (2) administration of our web site and servers, and to improve our services; and (3) Security reasons to track any malicious attacks to our host servers.  Access - Upon your request, we will provide you with a description of the information that we maintain about you.   We will accommodate all reasonable requests.  Please contact us by email at info@frontrush.com or in writing at the address below.<br><br>
 <strong>Front Rush Customers</strong><br>
 We require customers who register to use the services offered on our Sites (collectively, the "Service") to give us contact information, such as their name, company or college name, address, phone number, and e-mail address, and billing information, such as billing name and address.  Front Rush uses the information that we collect to set up the Service for customers and their organizations. We may also use the information to contact customers to discuss customer interest in our company, the Service that we provide, and to send information regarding our company or partners, such as promotions and events. Customers can opt out of being contacted by us, or receiving such information from us, at any time by clicking here and submitting their email.<br><br>
+
 Customers of the Service will be using the Site to host data and information ("Data") on their contacts.  Front Rush will not review, share, distribute, print, or reference any such Data except as provided in the Front Rush Terms of Service or as may be required by law. Individual records may at times be viewed or accessed only for the purpose of resolving a problem, support issue, or suspected violation of the Terms of Service, Acceptable Use Policy or as may be required by law. Of course, customers are responsible for maintaining the confidentiality and security of their user registration and password<br><br>
 Front Rush will not sell or rent your personal information, or Data, including customer e-mail addresses, to anyone.   Front Rush may disclose and transfer the information obtained from you through this Site or the Service as part of a merger, acquisition or other sale of its assets or business.<br><br>
 We may be legally obligated to disclose information to the government or to third parties under certain circumstances, such as illegal activity on our Site. Front Rush reserves the right to release personal information to its service providers, law enforcement or other government officials or in response to a formal request in a civil action, as Front Rush, in our sole and absolute discretion, deems necessary or appropriate.<br><br>
-We may also provide Aggregated Information to third parties. Such information will not include personal information of any customer or visitor.<br><br>
+
 Front Rush reserves the right to send customers certain communications relating to the Service, such as service announcements and administrative messages, that are considered part of your account, without offering you the opportunity to opt-out of receiving them.<br><br>
 We respect the privacy of children, and do not collect any more personal information than reasonably necessary to enable them to participate in the activities we offer at our Web site.<br><br>
 <strong>Information on Children</strong> <br>
 With respect to our online information collection practices from children under 13 years of age, we do not collect personally identifiable information.  With respect to the collection by other organizations of personal information from children at our site, our policy is that we do not have any agreements with outside organizations to collect personal information at our site.  We do not share children's personal information with anyone other than those who provide support for the internal operations of the Web site and our agents (e.g., contractors who provide fulfillment services or technical support to the Web site).  Parents can review the information that we have collected from their children online, prevent the further use or maintenance of such information, or direct the deletion of their children's personal information by calling, emailing or writing us as outlined below.
 <strong>Correcting &amp; Updating Your Information</strong><br>
+
 Customers can discontinue the Service at anytime by calling 866.634.1186.Front Rush or by emailing info@frontrush.com.  We will respond to your request within at most 7 days from the date of your request.<br><br>
 <strong>Third-Party Sites</strong><br>
 The Site contains links to other web sites. Front Rush LLC is not responsible for the privacy practices or the content of these other web sites. Customers and visitors will need to check the policy statement of these others web sites to understand their policies. Customers and visitors who access a linked site may be disclosing their private information. It is the responsibility of the user to keep such information private and confidential. <br><br>
@@ -118,54 +54,43 @@ Our Site has security measures in place to help protect against the loss, misuse
 Front Rush keeps your account information active in our user registration databases in order to provide immediate access to your personalization preferences and data each time you visit the Site. If you ask Front Rush to delete your Front Rush account, in most cases your account will be deactivated and then deleted from our user registration database in approximately 90 days.  Please note that any information that we have copied may remain in back-up storage for some period of time after your deletion request. This may be the case even though no information about your account remains in our active user databases.<br><br>
 The security of your personal information and Data is important to us. When you or your customers enter sensitive information on our inquiry forms, we encrypt that information using secure socket layer technology (SSL).   We follow generally accepted industry standards to protect the personal information submitted to us, both during transmission and once we receive it. No method of transmission over the Internet, or method of electronic storage, is 100% secure, however. Therefore, while we strive to use commercially acceptable means to protect your personal information, we cannot guarantee its absolute security.<br><br>
 Front Rush uses small gif images within emails to recover information about the e-mails sent by our customers.  Front Rush uses these items to record and store information such as the date and time the recipient viewed the e-mail message and other logging information. Front Rush uses this information to provide information to customers with respect to e-mails they send through the Front Rush tool.<br><br>
-<strong>Changes to this Statement</strong><br><br>
-Front Rush may update this Statement at any time, so please review it frequently. If we make material changes to this Statement, we will notify you in this Statement, by email or by a notice posted on the home page of the Site.
-Questions?<br><br>
+
+<strong>Changes to this Statement</strong><br>
+Front Rush may update this Statement at any time, so please review it frequently. If we make material changes to this Statement, we will notify you in this Statement, by email or by a notice posted on the home page of the Site.<br><br>
+
+<strong>Questions?</strong><br>
 If you have any questions about this Statement or the practices of this Site, please contact us at info@frontrush.com. You may also write to us at  Front Rush LLC, 350 S Main St Ste 215 Doylestown PA 18901 or call 866.634.1186.
-
-
-
-</div>
-</div><div id="bp"></div>
-
-
-
-
-
-
-
-
-</div></div>
-
-
-
-
-
-</div>
-<div><img src="../../resources/images/bbar.jpg" hspace="0" vspace="0" border="0" align="left"></div></div>
-</div>
-<div id="bottext"><div class="textbottom12" id="textbottom1">
- 866.634.1186 | <a href="../../contact/">info@frontrush.com</a> | <a href="#">Privacy Policy</a> | <a href="../terms/">Terms &amp; Conditions</a> </div>
- <div id="textbottom2">
- Copyright 2009. Frontrush, LLC. All rights reserved.
- 
-
-
-
-
-
-
-</div><!--container div end tag-->
-</div></div>
+ </div>
+ </div>
+<div id="footer">
+	<div class="container">
+	  <a id="logofooter" title="College Recruiting Software Made Easy, frontrush.com" href="../../index.html">
+		  <img alt="Front Rush College Recruiting Software" src="../../resources/images/frontrushlogofooter.jpg" height="28" width="92">
+	  </a>
+	  <ul class="policy">
+	   	  <li><a href="#">Privacy Policy</a></li>
+		  <li>|</li>
+		  <li><a href="../terms/index.html">Terms</a></li>
+		  <li>|</li>
+		  <li><a href="https://frontrushpay.com">Make a Payment</a></li>
+	  </ul>
+	  <ul class="links">
+	   	  <li><a href="../../index.html">Home</a></li>
+		  <li>|</li>
+		  <li><a href="../../features/index.html">Features</a></li>
+		  <li>|</li>
+		  <li><a href="../../about-us/index.html">About Us</a></li>
+	  </ul>
+	</div>
+  </div>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <script type="text/javascript">
+try {
 var pageTracker = _gat._getTracker("UA-1284198-1");
-pageTracker._initData();
 pageTracker._trackPageview();
-</script>
-
-
+} catch(err) {}</script>
+ 
 </body></html>
